--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             { 
                 name: 'كرتون', 
                 icon: 'fas fa-film',
-                url: 'https://mohamedvbx123.github.io/-/cartoon.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/'
             },
             { 
                 name: 'حزينة', 
