--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
     </div>
 
     <script>
-        // بيانات الأقسام مع الروابط
+        // بيانات الأقسام مع الروابط المباشرة لكل قسم
         const categories = [
             { 
                 name: 'رومانسية', 
                 icon: 'fas fa-heart',
-                url: 'https://mohamedvbx123.github.io/-/romantic.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/romantic.html'
             },
             { 
                 name: 'كرتون', 
@@ -186,32 +186,32 @@
             { 
                 name: 'حزينة', 
                 icon: 'fas fa-sad-tear',
-                url: 'https://mohamedvbx123.github.io/-/sad.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/sad.html'
             },
             { 
                 name: 'دينية', 
                 icon: 'fas fa-mosque',
-                url: 'https://mohamedvbx123.github.io/-/religious.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/religious.html'
             },
             { 
                 name: 'اقتباسات', 
                 icon: 'fas fa-quote-right',
-                url: 'https://mohamedvbx123.github.io/-/quotes.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/quotes.html'
             },
             { 
                 name: 'احتياطي 1', 
                 icon: 'fas fa-archive',
-                url: 'https://mohamedvbx123.github.io/-/backup1.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/backup1.html'
             },
             { 
                 name: 'احتياطي 2', 
                 icon: 'fas fa-archive',
-                url: 'https://mohamedvbx123.github.io/-/backup2.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/backup2.html'
             },
             { 
                 name: 'احتياطي 3', 
                 icon: 'fas fa-archive',
-                url: 'https://mohamedvbx123.github.io/-/backup3.html'
+                url: 'https://mohamedvbx123.github.io/posts_vbx_1/backup3.html'
             }
         ];
 
@@ -269,4 +269,4 @@
         initApp();
     </script>
 </body>
-</html>
+    </html>
