--- a/index.html
+++ b/index.html
@@ -176,17 +176,17 @@
             { 
                 name: 'رومانسية', 
                 icon: 'fas fa-heart',
-                url: 'https://mohamedvbx123.github.io/posts_vbx_1/romantic.html'
+                url: 'https://mohamedvbx123.github.io/posts_romantic_1/'
             },
             { 
                 name: 'كرتون', 
                 icon: 'fas fa-film',
-                url: 'https://mohamedvbx123.github.io/posts_vbx_1/'
+                url: 'https://mohamedvbx123.github.io/posts_sad_1/'
             },
             { 
                 name: 'حزينة', 
                 icon: 'fas fa-sad-tear',
-                url: 'https://mohamedvbx123.github.io/posts_vbx_1/sad.html'
+                url: 'https://mohamedvbx123.github.io/posts_sad_1/'
             },
             { 
                 name: 'دينية', 
