--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع البوستات - الأقسام</title>
+    <title> البوستات - الأقسام</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -181,7 +181,7 @@
             { 
                 name: 'كرتون', 
                 icon: 'fas fa-film',
-                url: 'https://mohamedvbx123.github.io/posts_sad_1/'
+                url: 'https://mohamedvbx123.github.io/posts_cartoon_1/'
             },
             { 
                 name: 'حزينة', 
